--- a/success.html
+++ b/success.html
@@ -35,7 +35,7 @@
 
   <script>
     // 1) Посилання на гайд, який треба видати після оплати:
-    const GUIDE_URL = "https://igor54553.github.io/44/"; // <- замініть на ваш реальний URL (Google Drive/Dropbox/ваш хостинг)
+    const GUIDE_URL = "https://miriniukiryna.github.io/zmist/"; // <- замініть на ваш реальний URL (Google Drive/Dropbox/ваш хостинг)
 
     // 2) URL вашого Apps Script (додасте після кроку 4)
     const APPS_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbxiZGtz2szd3Au7k2iR0C9kUZWaTK2Bw75llu15pzJZ1zsg63RvyMRkITGsGmiufKHu/exec";
@@ -80,3 +80,4 @@
   </script>
 </body>
 </html>
+
